# lab2

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  header.h
DFA/: CMakeLists.txt  DFA.cpp  DFA.h
MYREGEX/: CMakeLists.txt  MYREGEX.cpp  MYREGEX.h
NFA/: CMakeLists.txt  NFA.h
Tree/: CMakeLists.txt  STree.cpp  STree.h  items.h  strateg.h
tmp/: CMakeCache.txt  Makefile  cmake_install.cmake  main
tmp/DFA/: Makefile  cmake_install.cmake
tmp/MYREGEX/: Makefile  cmake_install.cmake
tmp/NFA/: Makefile  cmake_install.cmake
tmp/Tree/: Makefile  cmake_install.cmake
